--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
     "test": "./node_modules/.bin/mocha --require @babel/register --exit",
+    "start-app": "nodemon --exec babel-node --presets @babel/preset-env ./kwapp.js",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "author": "",
