--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "chai-http": "^4.3.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.10",
     "express": "^4.17.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.0",
